--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head><title>Ned CHatbot</title></head>
-<body><iframe width="350" height="430" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/a7615910-b2b7-4902-aac3-5245e7059ce4"></iframe>
+<style>
+    .content {
+        padding:5px;
+        margin-left:100px;
+        margin-right: 100px;
+        text-align: center;
+        background:#002D62;
+        color: white;
+        font-size: 20px;
+        font-family:sans-ser
+        border-radius: 0.9em;
+        box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1); 
+    }
+
+    .chatbot{
+        padding: 10px;
+        margin-left:450px;
+        margin-top:10px;
+        text-align: center;
+        background:#b06ab3;
+        width: 600px;
+        height: 100%;
+        border-radius: 0.9em;
+        box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.1);      
+    }
+</style>
+<body style="background-color:#FFC0CB;">
+    <div class = "content">
+    <h1>Welcome!!Welcome!!Welcome!!</h1>
+    <h3>&nbsp;&nbsp;&nbsp;&nbsp;My name is Ned , I am a bot </h3>
+    </div>
+
+
+    <div class = "chatbot">
+        <iframe width="380" height="430" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/a7615910-b2b7-4902-aac3-5245e7059ce4"></iframe>
+    </div>
 </body>
 </html> 
