--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Ned CHatbot</title>
-    <link rel= "stylesheet" type= "text/css" href= "../static/index.css">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='index.css')}}">
 </head>
 <body class="bodyDiv">
 
